--- a/app.wxss
+++ b/app.wxss
@@ -1,6 +1,7 @@
 @import "colorui/main.wxss";
 @import "colorui/icon.wxss";
 @import "colorui/other.wxss";
+@import "fonts/font.wxss";
 .scrollPage {
   height: 100vh;
 }
