--- a/pages/live/home/home.wxml
+++ b/pages/live/home/home.wxml
@@ -1,10 +1,10 @@
 <scroll-view scroll-y class="scrollPage">
-  <image src='/images/AlbumBg.jpg' mode='widthFix' class='png' style='width:100%;height:486rpx'></image>
+  <image src='/images/AlbumBg.jpg' mode='widthFix' class='png'></image>
   <view class='nav-list'>
-    <navigator open-type="navigate" hover-class='none' url="{{item.path}}" class="nav-li bg-{{item.color}}" wx:for="{{elements}}" wx:key>
-      <view class="nav-title">{{item.title}}</view>
-      <view class="nav-name">{{item.name}}</view>
-      <text class='cuIcon-{{item.icon}}'></text>
+    <navigator open-type="navigate" hover-class='none' url="{{'pages/album/'+item.id}}" class="nav-li bg-cyan" wx:for="{{albums}}" wx:key="id">
+      <view class="nav-title">{{item.album_name}}</view>
+      <view class="nav-name">{{item.description}}</view>
+      <text class='cuIcon-babyfill'></text>
     </navigator>
   </view>
   <view class='cu-tabbar-height'></view>
