--- a/pages/live/Photo/photo.wxss
+++ b/pages/live/Photo/photo.wxss
@@ -1,11 +1,12 @@
 .waterfall {
     margin: 0 auto;
     flex-direction: column;
+    column-count: 2;
 }
 
 .item {
-    padding: 10px 5px;
-    width:30%;
+    padding: 3px 0px;
+    width:100%;
 }
 
 .item-content {
